# decant

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: build.yml  fmt.yml
assets/: decant.py
crates/decant/: Cargo.toml
crates/decant-backend/: Cargo.toml
crates/decant-backend/src/: fixtures.rs  lib.rs  mock.rs
crates/decant-backend/tests/: adversarial.rs
crates/decant-cli/: Cargo.toml
crates/decant-cli/src/: main.rs
crates/decant-cli/tests/: cli_e2e.rs
crates/decant-client/: Cargo.toml
crates/decant-client/src/: lib.rs
crates/decant-core/: Cargo.toml
crates/decant-core/src/: lib.rs  pattern.rs  resolver.rs  scanner.rs
crates/decant-core/tests/: proptest_resolve.rs  proptest_scan.rs
crates/decant-daemon/: Cargo.toml
crates/decant-daemon/src/: lib.rs  main.rs
crates/decant-daemon/tests/: server_e2e.rs
crates/decant-interpose/: Cargo.toml
crates/decant-interpose/src/: handle_table.rs  hooks.rs  iat.rs  lib.rs  module_hooks.rs  originals.rs  process_hooks.rs  rpc.rs
crates/decant-memflow/: Cargo.toml
crates/decant-memflow/src/: backend.rs  lib.rs
crates/decant-protocol/: Cargo.toml
crates/decant-protocol/src/: lib.rs
crates/decant-protocol/tests/: proptest_framing.rs
crates/decant-wine-harness/: Cargo.toml
crates/decant-wine-harness/src/: lib.rs
crates/decant/src/: lib.rs
crates/decant/tests/: api.rs
docs/: ARCHITECTURE.md  DECISIONS.md  TESTING.md  VERSIONING.md
scripts/: ce_probe.lua  demo.sh
testbins/decant-launcher/: Cargo.toml
testbins/decant-launcher/src/: main.rs
testbins/dll-smoke/: Cargo.toml
testbins/dll-smoke/src/: main.rs
testbins/guest-target/: Cargo.toml
testbins/guest-target/src/: main.rs
testbins/hello-dll/: Cargo.toml
testbins/hello-dll/src/: lib.rs
testbins/mock-cheat/: Cargo.toml
testbins/mock-cheat/src/: main.rs
testbins/sample-tool/: Cargo.toml
testbins/sample-tool/src/: main.rs
wine-env/: run.sh  setup.sh
xtask/: Cargo.toml
xtask/src/: main.rs
