[package]
name = "decant-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Host-side CLI to drive the daemon: processes, modules, read, write, scan, resolve, diagnostics."

[[bin]]
name = "decant-cli"
path = "src/main.rs"

[dependencies]
decant-protocol = { path = "../decant-protocol" }
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
# For the end-to-end test: host the real server in-process and drive the CLI binary.
decant-daemon = { path = "../decant-daemon" }
decant-backend = { path = "../decant-backend" }
