[package]
name = "decant-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Host-side CLI to drive the daemon: processes, modules, read, write, scan, resolve, diagnostics."

[[bin]]
name = "decant-cli"
path = "src/main.rs"

[dependencies]
decant-protocol = { path = "../decant-protocol" }
decant-client = { path = "../decant-client" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
decant-daemon = { path = "../decant-daemon" }
decant-backend = { path = "../decant-backend" }
