[package]
name = "decant-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Host-side CLI to drive the daemon: processes, modules, read, write, scan, resolve, diagnostics."

[[bin]]
name = "decant-cli"
path = "src/main.rs"

[dependencies]
decant-protocol = { path = "../decant-protocol" }
anyhow.workspace = true
clap.workspace = true
