[package]
name = "decant-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Backend-agnostic analysis primitives: AOB scanner, pointer-chain resolver, snapshot model."

[dependencies]
decant-protocol = { path = "../decant-protocol" }
decant-backend = { path = "../decant-backend" }
thiserror.workspace = true

[dev-dependencies]
# proptest for scanner/resolver property tests.
proptest = "1"
