[package]
name = "decant-protocol"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Decant RPC wire protocol — the funnel. Shared by the Linux daemon and the windows-gnu interposer DLL."

[dependencies]
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
proptest = "1"
